test/fail/integration/_fail_sem_decl_funct_5.hs
x :: String -> Int
x y = 3
x z = 4
main = print "hello"